--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "donations",
   "main": "Donations.js",
-  "version": "1.0.0",
+  "version": "1.4.0",
   "displayName": "Donations",
-  "description": "A simple plugin that adds the annoying donation message to ur server",
+  "description": "A simple plugin that adds the annoying donation message to your server",
   "authors": [
     "bufferfishq",
     "andriycraft"
